--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
-name = tnt_revamped
-description = Adds TNT to the game
+name = pius_tnt
+description = New TNT mod for Pius birthday
 optional_depends = tnt, explosions
